tests/Rules/Structure/Fixtures/invalid/table_fake_caption.html.twig
{# 1 errors #}
<table>
  <tr><td>Monthly Sales</td></tr>
  <tr><th scope="col">Month</th><th scope="col">Revenue</th></tr>
  <tr><td>January</td><td>1000</td></tr>
</table>
